get the cars from the server via http

--- a/src/app/pages/car-list/car-list.page.html
+++ b/src/app/pages/car-list/car-list.page.html
@@ -39,10 +39,9 @@
                             </ion-row>
                         </ion-col>
                     </ion-row>
-                    <ion-button expand="full" class="ion-color-success">Rent for {{car.pricePerHour}}$/hour</ion-button>
+                    <ion-button expand="full" routerLink="/qr-generator" class="ion-color-success">Rent for {{car.pricePerHour}}$/hour</ion-button>
                 </ion-card-content>
             </ion-card>
         </ion-item>
     </ion-list>
-
 </ion-content>
