--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -7,5 +7,5 @@
 </ion-header>
 
 <ion-content padding>
-  <ion-button routerLink="/car-list">Heroes</ion-button>
+  <ion-button routerLink="/car-list">Choose a car</ion-button>
 </ion-content>
