set images based on carmodel

--- a/src/app/pages/car-list/car-list.page.html
+++ b/src/app/pages/car-list/car-list.page.html
@@ -17,7 +17,7 @@
                         <ion-col size="6">
                             <ion-row nowrap justify-content-start>
                                 <ion-icon src="assets/icon/gas-station.svg" padding-end="0.5px"></ion-icon>
-                                Benzina
+                                {{car.fuelType}}
                             </ion-row>
                         </ion-col>
                         <ion-col size="6">
